{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "9a42f278-4b4a-444d-ba6a-59a868049e15",
            "actions": [
                {
                    "name": "Special2",
                    "type": "Button",
                    "id": "9bd89045-55b5-4cd1-bbfd-c875ae558820",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "High2",
                    "type": "Button",
                    "id": "2a902672-8867-47e9-af88-f29cfd54854d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Medium2",
                    "type": "Button",
                    "id": "ca655958-e966-42d1-bf6a-e71cd9eb2e73",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Low2",
                    "type": "Button",
                    "id": "47ee1818-51a7-403e-9031-6f568eab85cc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move2",
                    "type": "Button",
                    "id": "4dfcee81-b86b-469e-8969-27ce286dc5f0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Special1",
                    "type": "Button",
                    "id": "6844c1ea-ad7a-4563-9396-5c1eb9512a9c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "High1",
                    "type": "Button",
                    "id": "5bc37081-4853-406d-9340-71b621a0b171",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Medium1",
                    "type": "Button",
                    "id": "cb9d58ca-2a41-493d-9976-40e71ce8af40",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Low1",
                    "type": "Button",
                    "id": "70b55abd-5429-4127-9bda-40fbf87fbf0f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move1",
                    "type": "Button",
                    "id": "da7b9c33-c74a-4c7a-93aa-d23410afbd95",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "822d053d-8b2f-496b-977b-6c22a5e0d69d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Special2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c6a976f-5675-42a0-94e1-2c9493a01284",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "High2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "708db341-7a50-4f2f-8052-c900bdc911a8",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Medium2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49833da4-71cd-4827-9ead-867c3ebcf257",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Low2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7044b80f-1f54-42f1-8555-598dcc4dac9c",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "401cd225-f280-4a87-9d13-aca50706fd68",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Special1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c533fc8-beda-4b15-8d68-fb3e1ae6512e",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "High1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef234173-c278-430a-88c5-50da4bfe39c7",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Medium1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0db03e9e-1a2e-4636-8728-1e21c02bdeeb",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Low1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5be43a3d-bbdd-4a09-ba78-773e048a9952",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}